--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -8,6 +8,12 @@
     font-size: 36px;
 }
 
-#third {
+.odd.cooler {
     font-size: 24px;
+}
+
+#fourth {
+    background-color: #00FF00;
+    font-size: 24px;
+    font-weight: bold;
 }
