--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -12,6 +12,15 @@
     font-size: 24px;
 }
 
+/* .adjust-font-size {
+    font-size: 24px;
+} */
+
+/* fourth {
+    background-color: #00FF00;
+    font-weight: bold;
+} */
+
 #fourth {
     background-color: #00FF00;
     font-size: 24px;
