feat: style first element
Black background and white text.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,3 +1,8 @@
+.first {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
 button {
     font-size: 28px;
     font-family: "Helvetica", "Times New Roman", sans-serif;
