--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -3,7 +3,12 @@
     color: rgb(255, 255, 255);
 }
 
-button {
+.second {
+    background-color: hsl(60, 100%, 50%);
+}
+
+.first,
+.second {
     font-size: 28px;
     font-family: "Helvetica", "Times New Roman", sans-serif;
 }
