feat: add margin-bottom
8px gap between each blue section of card.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,16 +6,18 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  border: 8px solid #ffffff;
+  border: 8px solid #fff;
   margin: 16px auto;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
 }
 
 .button-container {
