--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,7 +6,8 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  border: 8px solid #fff;
+  /* border: 8px solid #fff; */
+  padding: 8px;
   margin: 16px auto;
 }
 
