--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,6 +13,10 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  /* flex-flow: row wrap; */
+  justify-content: space-around;
+
+  padding: 8px;
 }
 
 .profile-image {
@@ -47,14 +51,29 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  padding: 0;
+  gap: 16px;
+
+  margin: 0;
 }
 
 .right-aligned {
   display: flex;
   align-items: center;
+  gap: 16px;
+}
+
+/* .right-aligned {
+  display: flex;
+  align-items: center;
+  margin: 8px;
+  gap: 16px;
 }
 
 .left-aligned {
   display: flex;
   align-items: center;
-}
+  margin: 8px;
+  margin-left: auto;
+  gap: 16px;
+} */
