--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  /* padding: 5px 20px; */
+
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .logo {
@@ -9,11 +15,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  gap: 8px;
 }
 
 a {
@@ -23,3 +34,17 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* .left-links,
+.right-links {
+  display: flex;
+  display: flex;
+}
+
+.left-links ul {
+  justify-content: flex-start;
+}
+
+.right-links ul {
+  justify-content: flex-end;
+} */
