--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -12,6 +12,17 @@ img {
   font-weight: 900;
 }
 
+.plants {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+/* .plant-type {
+  text-align: center;
+} */
+
+
 /* do not edit this footer */
 .footer {
   position: fixed;
