--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,17 +10,14 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
   gap: 52px;
-  justify-content: center;
 }
-
-/* .plant-type {
-  text-align: center;
-} */
 
 
 /* do not edit this footer */
