feat: make plant-type containers flex containers
Nested flex contaienrs to justify content and align text of items.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -17,6 +17,15 @@ img {
 .plants {
   display: flex;
   gap: 52px;
+  justify-content: center;
+}
+
+.plant-type {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 200px;
+  text-align: center;
 }
 
 
