--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
+  /* text-align: center; */
   margin-bottom: 32px;
 }
 
@@ -25,7 +26,7 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   width: 200px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 
