--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -22,10 +22,10 @@ img {
 }
 
 .plant-type {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  width: 200px;
+  justify-content: center; */
+  max-width: 200px;
   /* text-align: center; */
 }
 
