--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -27,6 +27,7 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
+  padding: 15px;
 }
 
 .icon {
@@ -41,6 +42,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  margin: 0 px;
 }
 
 .close-button {
