--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -28,6 +28,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
   padding: 15px;
+  gap: 15px;
 }
 
 .icon {
@@ -42,7 +43,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  margin: 0 px;
 }
 
 .close-button {
