feat: turn .modal-content div into flex container
Have nested flex container to align modal content.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,6 +15,10 @@ body {
   justify-content: center;
 }
 
+.modal-content {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .header {
   font-weight: bold;
