feat: remove link styling
Use text-decoration attribute to remove link styling when state changes.

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -25,6 +25,18 @@ input {
   width: 400px;
 }
 
+header {
+  display: flex;
+}
+
 ul {
   list-style-type: none;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #818184;
+  text-decoration: none;
 }
