--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -26,6 +26,7 @@ input {
   width: 400px;
 }
 
+.footer,
 .header {
   display: flex;
   justify-content: space-between;
@@ -54,4 +55,8 @@ a:active {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
