--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,7 +7,7 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 img {
@@ -19,7 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
-  padding: 10px;
+  padding: 8px 16px;
 }
 
 input {
@@ -33,31 +33,30 @@ input {
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 16px;
 }
 
 ul {
   display: flex;
   padding: 0;
   margin: 0;
-  gap: 10px;
+  gap: 16px;
   list-style-type: none;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
+a {
   color: #818184;
   text-decoration: none;
 }
 
 .content {
+  flex: 1;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 16px;
 }
 
 .footer {
