--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -12,6 +12,9 @@ body {
   color: white;
   font-size: 32px;
   font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding: 16px;
 }
 
 .footer {
