feat: set text-decoration to none for sidebar links
Remove underline from sidebar links.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -32,6 +32,13 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  font-size: 24px;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 16px;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
