--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -31,18 +31,23 @@ body {
 }
 
 .sidebar {
+  flex-shrink: 0;
   width: 300px;
+  padding: 16px;
   background: royalblue;
   box-sizing: border-box;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 a {
-  flex-shrink: 0;
-  width: 300px;
   font-size: 24px;
   color: #FFFFFF;
   text-decoration: none;
-  padding: 16px;
 }
 
 .card {
