feat: turn card section into flex container
Use flex wrap to align the cards.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -51,6 +51,12 @@ a {
   text-decoration: none;
 }
 
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+}
+
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
