--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -14,7 +14,8 @@ body {
   font-weight: 900;
   display: flex;
   align-items: center;
-  padding-left: 16px;
+  /* padding-left: 16px; */
+  padding: 0 16px;
 }
 
 .footer {
@@ -45,6 +46,10 @@ ul {
   margin: 0;
 }
 
+li {
+  margin-bottom: 16px;
+}
+
 a {
   font-size: 24px;
   color: #FFFFFF;
@@ -55,15 +60,13 @@ a {
   display: flex;
   flex-wrap: wrap;
   padding: 48px;
-  gap: 20px;
+  gap: 32px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  font-size: 14px;
-  padding: 20px;
-  flex: 1 1 calc(33.333% - 20px);
-  max-width: 250px;
+  padding: 16px;
+  width: 300px;
 }
