--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -13,6 +13,7 @@ html {
   display: grid;
   gap: 15px;
   grid-template-rows: 100px 100px 500px 100px;
+  grid-template-columns: 300px 900px;
 }
 
 .container div {
