feat: set column span for nav and article between lines 2 and 3
Nav and article only span second column.

--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -36,10 +36,12 @@ html {
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2 / 3;
 }
 
 .footer {
