--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -32,18 +32,18 @@ html {
 
 .sidebar {
   background-color: #005B94;
-  grid-column: 1 / 2;
+  /* grid-column: 1 / 2; */
   grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #642cde;
-  grid-column: 2 / 3;
+  /* grid-column: 2 / 3; */
 }
 
 .article {
   background-color: #7E1DC3;
-  grid-column: 2 / 3;
+  /* grid-column: 2 / 3; */
 }
 
 .footer {
