--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -24,6 +24,7 @@
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-column: 1 / 3;
 }
 
 .menu ul,
@@ -108,6 +109,9 @@
 
 .footer {
   background-color: #393f4d;
+
+  display: grid;
+  grid-column: 1 / 3;
 }
 
 .footer p {
