--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -23,8 +23,13 @@
   background-color: #393f4d;
 
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   grid-column: 1 / 3;
+  align-items: center;
+}
+
+.logo {
+  text-align: left;
 }
 
 .menu ul,
