--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -67,6 +67,13 @@
   font-weight: normal;
 }
 
+.sidebar .photo,
+.sidebar .side-content {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav {
   background-color: #C50208;
 }
