refactor: use grid property to align logo
Use justify-self to align grid item along inline axis.

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -29,7 +29,12 @@
 }
 
 .logo {
-  text-align: left;
+  /* text-align: left; */
+  justify-self: start;
+}
+
+.menu {
+  align-items: center;
 }
 
 .menu ul,
