--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -100,8 +100,7 @@
   display: grid;
   gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-column: 2 / 3;
-  
+  /* grid-column: 2 / 3; */
 }
 
 .article p {
