--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -34,7 +34,7 @@
 }
 
 .menu {
-  align-items: center;
+  align-self: center;
 }
 
 .menu ul,
@@ -121,6 +121,7 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
